# adam-assist

./: .gitignore  LICENSE.txt  MIGRATION.md  README.md  pyproject.toml  test-assist-versions.sh
.github/workflows/: pip-build-lint-test-coverage.yml  publish.yml  release-candidate-wheel-matrix.yml  test.yml
dev/bench/: data.js
migration/parity/: _assist_legacy_runner.py  _assist_oracle.py
migration/public_surface/: adam_assist_0_3_10.json
migration/scripts/: benchmark_assist_impacts.py  benchmark_assist_public_semantics.py  perf_assist_two_runtime.py  write_maturin_version.py
rust/adam_assist_rs/: Cargo.toml  README.md
rust/adam_assist_rs/src/: assist_error.rs  assist_propagation.rs  lib.rs  python.rs
src/adam_assist/: __init__.py  _arrow.py  perturbers.py  propagator.py  version.py
src/adam_core/propagator/: adam_assist.py  adam_assist_version.py  assist.py
src/adam_core/propagators/: assist.py
tests/: test_benchmarks.py  test_collisions.py  test_complete_residuals.py  test_dependency_metadata.py  test_ephemeris.py  test_impacts.py  test_integration.py  test_nongrav.py  test_perturbers.py  test_propagate.py  test_propagator_settings.py  test_public_surface_compatibility.py
tests/data/: 2013_RR165_orbit.parquet  I00007_orbit.parquet  I00008_orbit.parquet  I00009_orbit.parquet  benchmark_orbits.parquet  impactors.parquet
tests/rust/: conftest.py  test_adam_assist_rust_arrow_contract.py  test_adam_assist_rust_covariance.py  test_adam_assist_rust_ephemeris.py  test_adam_assist_rust_impacts.py  test_adam_assist_rust_od.py  test_adam_assist_rust_public_semantics.py  test_adam_assist_rust_typed_mapping.py
