[project]
name = "adam-assist"
dynamic = ["version"]
description = "ADAM Core propagator using the Rust ASSIST backend"
authors = [
    { name = "Alec Koumjian", email = "akoumjian@gmail.com" },
    { name = "Kathleen Kiker" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["astronomy", "orbital mechanics", "propagation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "adam-core==0.5.6rc2",
    "naif-de440",
    "jpl-small-bodies-de441-n16",
    "numpy",
    "pyarrow",
    "quivr",
]

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/adam_assist_rs/Cargo.toml"
module-name = "adam_assist._native"
python-source = "src"
features = ["python", "extension-module"]

[project.urls]
Documentation = "https://github.com/B612-Asteroid-Institute/adam-assist#readme"
Issues = "https://github.com/B612-Asteroid-Institute/adam-assist/issues"
Source = "https://github.com/B612-Asteroid-Institute/adam-assist"

[project.optional-dependencies]
dev = [
    "ruff",
    "pdm",
    "mypy",
    "maturin>=1.7,<2",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-benchmark",
    "black",
    "isort",
    "astropy",
]

[tool.pdm.scripts]
wheel-version = "python migration/scripts/write_maturin_version.py"
rust-develop = { composite = [
    "pdm run wheel-version",
    "maturin develop --release --features python,extension-module",
] }
check = { composite = ["lint", "typecheck"] }
format = { composite = ["black ./src/adam_assist ./tests", "isort ./src/adam_assist ./tests"] }
lint = { composite = ["ruff check ./src/adam_assist ./tests", "black --check ./src/adam_assist ./tests", "isort --check-only ./src/adam_assist ./tests"] }
fix = "ruff check ./src/adam_assist ./tests --fix"
typecheck = "mypy --strict ./src/adam_assist"
test = "pytest --benchmark-skip {args}"
coverage = "pytest --benchmark-skip --cov=adam_assist --cov-report=xml {args}"
benchmark = "pytest --benchmark-only {args}"
assist-public-semantics-benchmark = "python migration/scripts/benchmark_assist_public_semantics.py"
assist-two-runtime-benchmark = "python migration/scripts/perf_assist_two_runtime.py"

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = [
    "live: opt-in network/Horizons accuracy checks; excluded from deterministic CI",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
