[package]
name = "adam_assist_rs"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0"
publish = false

[features]
default = []
python = ["dep:ndarray", "dep:numpy", "dep:pyo3"]
extension-module = ["python", "pyo3/extension-module"]

[dependencies]
# Vendored snapshots of adam-core's permissive generic contracts. See
# rust/vendor/README.md for upstream provenance and update policy.
adam_core_rs_coords = { path = "../vendor/adam_core_rs_coords" }
adam_core_rs_spice = { path = "../vendor/adam_core_rs_spice" }
# Lean binding-only assist-rs (PR #11 rework, bead personal-np5): orchestration
# now lives in this crate's assist_propagation module.
assist-rs = { git = "https://github.com/B612-Asteroid-Institute/assist-rs.git", rev = "33233c6efd7f9fb4a5e61538f5c332262f731170" }
ndarray = { version = "0.16", optional = true }
numpy = { version = "0.22", optional = true }
pyo3 = { version = "0.22", optional = true }
rayon = "1.11"

[dev-dependencies]
# Live-test kernel resolution (env override -> installed-Python probe ->
# cache -> checksummed PyPI wheel fetch). Vendored; see rust/vendor/README.md.
adam_core_rs_kernel_data = { path = "../vendor/adam_core_rs_kernel_data", default-features = false }
serde_json = "1"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]
