[package]
name = "adam_assist_rs"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0"
publish = false

[features]
default = []
python = ["dep:ndarray", "dep:numpy", "dep:pyo3"]
extension-module = ["python", "pyo3/extension-module"]

[dependencies]
# Vendored snapshots of adam-core's permissive generic contracts. See
# rust/vendor/README.md for upstream provenance and update policy.
adam_core_rs_coords = { path = "../vendor/adam_core_rs_coords" }
adam_core_rs_spice = { path = "../vendor/adam_core_rs_spice" }
# Canonical ASSIST/REBOUND FFI and RAII layers. All domain orchestration lives
# in this crate; exact versions are the reviewed mainline sys-crate releases.
libassist-sys = "=1.2.1"
librebound-sys = "=4.6.0"
thiserror = "2"
ndarray = { version = "0.16", optional = true }
numpy = { version = "0.22", optional = true }
pyo3 = { version = "0.22", optional = true }
rayon = "1.11"

[dev-dependencies]
# Live-test kernel resolution (env override -> installed-Python probe ->
# cache -> checksummed PyPI wheel fetch). Vendored; see rust/vendor/README.md.
adam_core_rs_kernel_data = { path = "../vendor/adam_core_rs_kernel_data", default-features = false }
serde_json = "1"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

# Keep this standalone package from being implicitly adopted by an ancestor
# Cargo workspace when adam-assist is checked out beneath another repository
# (as in adam-core's release-candidate wheel matrix).
[workspace]
resolver = "2"
